Replace placeholder images with actual images

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="card group grid lg:grid-cols-12 gap-10 p-10 rounded-[4rem] border border-slate-200 bg-white hover:border-sky-500 transition-all duration-500 interactive">
                     <div class="lg:col-span-4 aspect-video lg:aspect-square bg-slate-100 rounded-[3rem] overflow-hidden">
-                        <img src="https://via.placeholder.com/600x600?text=Mental+Health" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700" loading="lazy">
+                        <img src="images/vaccine.jpeg" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700" loading="lazy">
                     </div>
                     <div class="lg:col-span-8 flex flex-col justify-center">
                         <span class="text-sky-500 font-bold uppercase tracking-widest text-xs mb-2 italic">May 2024 – Jun 2024</span>
@@ -204,7 +204,7 @@
                 </div>
                                 <div class="card group grid lg:grid-cols-12 gap-10 p-10 rounded-[4rem] border border-slate-200 bg-white hover:border-sky-500 transition-all duration-500">
                     <div class="lg:col-span-4 aspect-video lg:aspect-square bg-slate-100 rounded-[3rem] overflow-hidden">
-                        <img src="https://via.placeholder.com/600x600?text=Basic+Nursing" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700">
+                        <img src="images/baby.jpeg" class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-700" loading="lazy">
                     </div>
                     <div class="lg:col-span-8 flex flex-col justify-center">
                         <span class="text-sky-500 font-bold uppercase tracking-widest text-xs mb-2">Oct 2022 – Nov 2022 • Internship</span>
