--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <link rel="icon" type="image/png" href="images/portfolio.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garima Poudel | RN </title>
+    <meta name="title" content="Garima Poudel | Registered Nurse Portfolio">
+    <meta name="description" content="New Grad Registered Nurse">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.yourdomain.com/"> <meta property="og:title" content="Garima Poudel | RN Portfolio">
+    <meta property="og:description" content="Explore my clinical experience">
+    <meta property="og:image" content="https://www.yourdomain.com/images/portfolio.jpeg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Garima Poudel | RN Portfolio">
+    <meta property="twitter:description" content="Registered Nurse Portfolio - Clinical Experience & Skills.">
+    <meta property="twitter:image" content="https://www.yourdomain.com/images/portfolio.jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
