--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="title" content="Garima Poudel | Registered Nurse Portfolio">
     <meta name="description" content="New Grad Registered Nurse">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.yourdomain.com/"> <meta property="og:title" content="Garima Poudel | RN Portfolio">
+    <meta property="og:url" content="https://garimapoudel.com.np/"> <meta property="og:title" content="Garima Poudel | RN Portfolio">
     <meta property="og:description" content="Explore my clinical experience">
-    <meta property="og:image" content="https://www.yourdomain.com/images/portfolio.jpeg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://garimapoudel.com.np/images/portfolio.jpeg"> <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Garima Poudel | RN Portfolio">
     <meta property="twitter:description" content="Registered Nurse Portfolio - Clinical Experience & Skills.">
-    <meta property="twitter:image" content="https://www.yourdomain.com/images/portfolio.jpeg">
+    <meta property="twitter:image" content="https://garimapoudel.com.np/images/portfolio.jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap');
