Update favicon link and meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-    <link rel="icon" type="image/png" href="images/portfolio.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garima Poudel | RN </title>
+    <link rel="icon" type="image/jpeg" href="images/portfolio.jpeg">
     <meta name="title" content="Garima Poudel | Registered Nurse Portfolio">
     <meta name="description" content="New Grad Registered Nurse">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://garimapoudel.com.np/"> <meta property="og:title" content="Garima Poudel | RN Portfolio">
+    <meta property="og:url" content="https://garimapoudel.com.np/">
+    <meta property="og:title" content="Garima Poudel | RN Portfolio">
     <meta property="og:description" content="Explore my clinical experience">
-    <meta property="og:image" content="https://garimapoudel.com.np/images/portfolio.jpeg"> <meta property="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://garimapoudel.com.np/images/portfolio.jpeg">    
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Garima Poudel | RN Portfolio">
     <meta property="twitter:description" content="Registered Nurse Portfolio - Clinical Experience & Skills.">
     <meta property="twitter:image" content="https://garimapoudel.com.np/images/portfolio.jpeg">
