--- a/porposeday/index.html
+++ b/porposeday/index.html
@@ -20,13 +20,44 @@
 
         .cursive { font-family: 'Dancing Script', cursive; }
 
+        /* SPECIAL VIDEO BACKGROUND */
         #video-container {
             display: none; position: fixed; inset: 0; z-index: 5000; 
-            background: rgba(0,0,0,0.95); flex-direction: column; align-items: center; justify-content: center;
+            background: radial-gradient(circle at center, #2e1052 0%, #050208 100%); 
+            flex-direction: column; align-items: center; justify-content: center;
         }
+
+        .video-wrapper {
+            position: relative;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* The Glowing Halo around the video */
+        .video-wrapper::before {
+            content: '';
+            position: absolute;
+            inset: -15px;
+            background: linear-gradient(45deg, #fbbf24, #ec4899, #8b5cf6, #fbbf24);
+            filter: blur(30px);
+            border-radius: 40px;
+            opacity: 0.6;
+            animation: rotateGlow 6s linear infinite;
+        }
+
+        @keyframes rotateGlow {
+            0% { filter: blur(30px) hue-rotate(0deg); }
+            100% { filter: blur(30px) hue-rotate(360deg); }
+        }
+
         video {
-            width: 85%; max-width: 380px; border: 2px solid #fbbf24; border-radius: 30px;
-            box-shadow: 0 0 60px rgba(251,191,36,0.4);
+            position: relative;
+            width: 85vw; max-width: 380px; 
+            border: 2px solid rgba(251, 191, 36, 0.8); 
+            border-radius: 30px;
+            z-index: 1;
         }
 
         #ring-trigger {
@@ -64,10 +95,12 @@
     <div id="ring-trigger">💍</div>
 
     <div id="video-container">
-        <video id="propose-video" playsinline>
-            <source src="propose_video.mp4" type="video/mp4">
-        </video>
-        <button onclick="closeVideo()" class="mt-10 text-xs tracking-widest uppercase opacity-60 border-b border-white">Tap to Return</button>
+        <div class="video-wrapper">
+            <video id="propose-video" playsinline preload="auto">
+                <source src="propose_video.mp4" type="video/mp4">
+            </video>
+        </div>
+        <button onclick="closeVideo()" class="mt-12 text-xs tracking-widest uppercase opacity-70 border-b border-white pb-1">Tap to Return</button>
     </div>
 
     <div id="three-container"></div>
@@ -85,11 +118,10 @@
         const video = document.getElementById('propose-video');
 
         async function begin() {
-            // Unlocks audio for mobile by playing and immediately pausing
-            cosmicAudio.play().then(() => {
-                // Keep it playing as the background music
-                cosmicAudio.volume = 1.0;
-            }).catch(e => console.log("Audio unlock failed", e));
+            // Pre-poke the video for 15MB loading
+            video.load(); 
+            
+            cosmicAudio.play().then(() => { cosmicAudio.volume = 1.0; }).catch(e => {});
             
             document.getElementById('start-screen').style.display = 'none';
             document.getElementById('three-container').style.display = 'block';
@@ -97,7 +129,6 @@
             initThree();
             animateThree();
 
-            // Reveal the Ring after 5 seconds of cosmic travel
             setTimeout(() => {
                 const ring = document.getElementById('ring-trigger');
                 ring.style.display = 'block';
@@ -108,14 +139,14 @@
         function startProposal() {
             document.getElementById('ring-trigger').style.display = 'none';
             document.getElementById('video-container').style.display = 'flex';
-            cosmicAudio.volume = 0.15; // Duck the music for the video
+            cosmicAudio.volume = 0.15;
             video.play();
         }
 
         function closeVideo() {
             document.getElementById('video-container').style.display = 'none';
             video.pause();
-            cosmicAudio.volume = 1.0; // Bring music back up
+            cosmicAudio.volume = 1.0;
             document.getElementById('final-card').classList.add('show');
         }
 
@@ -127,7 +158,6 @@
             renderer.setClearColor(0x050208);
             document.getElementById('three-container').appendChild(renderer.domElement);
 
-            // Stars
             const starGeo = new THREE.BufferGeometry();
             const starCoords = [];
             for(let i=0; i<2000; i++) starCoords.push((Math.random()-0.5)*200, (Math.random()-0.5)*200, (Math.random()-0.5)*200);
@@ -135,7 +165,6 @@
             stars = new THREE.Points(starGeo, new THREE.PointsMaterial({color: 0xffffff, size: 0.15, transparent: true, opacity: 0.8}));
             scene.add(stars);
 
-            // Floating Hearts
             const heartCanvas = document.createElement('canvas'); heartCanvas.width = 64; heartCanvas.height = 64;
             const hCtx = heartCanvas.getContext('2d'); hCtx.font = '50px serif'; hCtx.fillText('💖', 5, 50);
             const heartTex = new THREE.CanvasTexture(heartCanvas);
@@ -147,11 +176,7 @@
                 sprite.scale.set(scale, scale, 1);
                 sprite.position.set((Math.random()-0.5)*100, (Math.random()-0.5)*100, (Math.random()-0.5)*100);
                 scene.add(sprite);
-                hearts.push({
-                    obj: sprite, 
-                    speed: Math.random() * 0.02 + 0.01,
-                    angle: Math.random() * Math.PI * 2
-                });
+                hearts.push({ obj: sprite, speed: Math.random() * 0.02 + 0.01, angle: Math.random() * Math.PI * 2 });
             }
 
             const light = new THREE.PointLight(0x7e22ce, 10, 100);
@@ -167,7 +192,7 @@
             camera.position.y += ( -(mouseY / window.innerHeight - 0.5) * 20 - camera.position.y ) * 0.02;
             camera.lookAt(scene.position);
             hearts.forEach(h => {
-                h.obj.position.z += h.speed * 5;
+                h.obj.position.z += h.speed * 9;
                 h.obj.position.x += Math.sin(Date.now() * 0.001 + h.angle) * 0.02;
                 if(h.obj.position.z > 30) h.obj.position.z = -70;
             });
@@ -175,14 +200,8 @@
             renderer.render(scene, camera);
         }
 
-        window.addEventListener('touchmove', (e) => { 
-            mouseX = e.touches[0].clientX; 
-            mouseY = e.touches[0].clientY; 
-        }, { passive: false });
-        window.addEventListener('mousemove', (e) => { 
-            mouseX = e.clientX; 
-            mouseY = e.clientY; 
-        });
+        window.addEventListener('touchmove', (e) => { mouseX = e.touches[0].clientX; mouseY = e.touches[0].clientY; }, { passive: false });
+        window.addEventListener('mousemove', (e) => { mouseX = e.clientX; mouseY = e.clientY; });
         window.addEventListener('resize', () => {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
